# tarmac

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  glossary_missing_keywords.csv  pyproject.toml
docs/: OVERVIEW.md  cli.md  custom-objects.md  datasets.md  labeling-ui.md  models.md  training.md
models/: active_model.json  crack_seg_head.json
recording-app/: README.md  SPEC.md  pubspec.yaml
recording-app/ios/: Podfile
recording-app/lib/: app.dart  main.dart
reports/: CRACK_DETECTION.md  CRACK_SEGMENTATION.md  DATA_LICENSES.md  DEFECT_DETECTION.md  DOMAIN_ADAPT.md  PHASE2_BASELINE.md  PHASE2_BASELINE_dinov2_finetuned.md  PHASE2_BASELINE_dinov3_domain_adapt.md  PHASE2_BASELINE_dinov3_finetuned.md  PHASE2_BASELINE_dinov3_frozen.md  PHASE3_FINETUNE.md  RESULTS.md  STRUCTURAL_DATASETS.md  SURFACE_QUALITY_RESEARCH.md  YOLO_MOBILE.md  cluster_profile.csv  cluster_profile_dinov2_finetuned.csv  cluster_profile_dinov3.csv  cluster_profile_dinov3_domain_adapt.csv  cluster_profile_dinov3_finetuned.csv  crack_metrics.json  crack_seg_head_dinov3_1024_metrics.json  crack_seg_head_metrics.json  defect_metrics.json  domain_adapt_metrics.json  phase2_metrics.json  phase2_metrics_dinov2_finetuned.json  phase2_metrics_dinov3_finetuned.json  phase2_metrics_dinov3_frozen.json  yolo_benchmark.json
scripts/: smoke_assess.py  smoke_crack.py  smoke_crackseg.py  smoke_defect_head.py  smoke_defects.py  smoke_gps_sources.py  smoke_phase1.py  smoke_phase45.py  smoke_seg_data.py  smoke_seg_head.py  smoke_survey.py  smoke_visualize.py  smoke_yolo.py
src/tarmac/: __init__.py  cli.py
(+101 files in other folders)
