[project]
name = "tarmac"
version = "0.1.0"
description = "Road surface quality analysis with vision embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "timm",
  "transformers",
  "scikit-learn",
  "hdbscan",
  "umap-learn",
  "faiss-cpu",
  "pandas",
  "pyarrow",
  "pillow",
  "typer",
  "rich",
  "plotly",
  "streamlit",
  "joblib",
  "requests",
  "tqdm",
  "matplotlib>=3.11.0",
  "scikit-image>=0.26.0",
  "scipy>=1.17.1",
  "ultralytics>=8.4.66",
  "onnx>=1.21.0",
  "onnxruntime>=1.26.0",
  "onnxslim>=0.1.94",
  "coremltools>=9.0",
]

[project.scripts]
tarmac = "tarmac.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
